--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,9 @@ dependencies:
   dio: ^5.8.0+1
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.2.1
   flutter_riverpod: ^2.6.1
   geolocator: ^13.0.2
-  # shared_preferences: ^2.5.1
-  
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -54,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
